--- a/app/view/news.nj
+++ b/app/view/news.nj
@@ -16,8 +16,8 @@
 
     <section class="section-box news-box">
         <div class="container">
-            <div class="news-flex">
-                <div class="news-left">
+            <div class="conn-flex">
+                <div class="conn-left">
                     <div class="pane-box">
                         <div class="pane-top">
                             <h3 class="tle-cn">技术支持</h3>
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="news-right">
+                <div class="conn-right">
                     <div class="con-title">
                         <span>新闻资讯</span>
                         <i>News Information</i>
@@ -116,10 +116,11 @@
                                 </a>
                             </li>
                         </ul>
-                        <div></div>
                     </div>
-
                 </div>
-            </section>
+            </div>
 
-        {% endblock %}
+        </div>
+    </section>
+
+{% endblock %}
